Sign up form example

--- a/5. Homework_Payyed/5. Payyed_website.html
+++ b/5. Homework_Payyed/5. Payyed_website.html
@@ -12,17 +12,38 @@
     <div class="parent">
         <div class="leftChild">                          
             <div class="img-color">
-                    <div class="logo">
-                            <img src="logo-light.png" style="width: 100%; height: 100%;">
-                        </div> 
-                <div class="text">
-                    <h1>Get Verified!</h1>
-                    <p>Every day, Payyed makes thousands of customers happy</p>
-                </div>
+                    <div class="content">
+                            <div class="logo">
+                                    <img src="logo-light.png" style="width: 100%; height: 100%;">
+                                </div> 
+                        <div class="text">
+                            <h1>Get Verified!</h1>
+                            <p>Every day, Payyed makes thousands of customers happy</p>
+                    </div>
+            </div>
+            </div>
+            </div>
+        <div class="rightChild">
+            <div class="row">
+                <h3>Sign Up</h3>
+                <form>
+                    <div class="form-group">
+                        <label for="fullName">Full Name</label>
+                        <input type="text" class="form-control" id="fullName" required placeholder="Enter your name">
+                    </div>
+                    <div class="form-group">
+                            <label for="emailAddress">Email Address</label>
+                            <input type="email" class="form-control" id="emailAddress" required placeholder="Enter your email">
+                    </div>
+                    <div class="form-group">
+                            <label for="loginPassword">Password</label>
+                            <input type="password" class="form-control" id="loginPassword" required placeholder="Enter password">
+                    </div>
+                    <input type="submit" class="mainBtn" id="submit" value="Sign Up">
+                    <p>Already have an account? <a class="btn-link" href="login.html">Log In</a></p>
+                </form>
             </div>
         </div>
-    </div>  
-        <div class="rightChild"></div>
     </div>   
 </body>
 </html>
